Add camera ready proposals+posters+videos.

--- a/index.html
+++ b/index.html
@@ -293,6 +293,275 @@
         </div>
         </section>
 
+        <!-- ------------------------------------------------------------------------------------------------------->
+        <section class="main style1">
+        <div class="container">
+
+        <div class="col-10-medium off-1-medium col-8-large off-2-large col-8-xlarge off-2-xlarge col-8-max off-2-max">
+            <!--<p> </p>-->
+            <header class="major special">
+                <h2>Accepted proposals</h2>
+            </header>
+            
+            <p align="center">
+                Playlist of all 3-minute videos<br>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLB2hvs7du3_dNYh7JZY0-EUUrGDYFGpbl" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </p>
+
+            <div class="table-wrapper">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <b>ID</b>
+                            </td>
+                            <td>
+                                <b>Authors</b>
+                            </td>
+                            <td>
+                                <b>Title</b>
+                            </td>
+                            <td>
+                                <b>Proposal</b>
+                            </td>
+                            <td>
+                                <b>Video</b>
+                            </td>
+                            <td>
+                                <b>Poster</b>
+                            </td>
+                            <!--<td>
+                                <b>Results</b>
+                            </td>-->
+                        </tr>
+                        <tr>
+                            <td>
+                                3
+                            </td>
+                            <td>
+                                Shubhaankar Gupta, Thomas P. O’Connell, Bernhard Egger
+                            </td>
+                            <td>
+                                <em>
+                                Beyond Flatland: Pre-training with a Strong 3D Inductive Bias
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/3_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/HslXCscx70o">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/3_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                6
+                            </td>
+                            <td>
+                                Mikolaj Czerkawski, Javier Cardona, Robert Atkinson, Craig Michie, Ivan Andonovic, Carmine Clemente, Christos Tachtatzis
+                            </td>
+                            <td>
+                                <em>
+                                Neural Weight Step Video Compression
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/6_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/rF6ibyK2iSs">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/6_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                8
+                            </td>
+                            <td>
+                                Hamid Eghbal-zadeh, Gerhard Widmer
+                            </td>
+                            <td>
+                                <em>
+                                How Much is an Augmented Sample Worth?
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/8_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/luq8SUnA2dw">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/8_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                10
+                            </td>
+                            <td>
+                                Steven Lang, Martin Mundt, Fabrizio Ventola, Robert Peharz, Kristian Kersting
+                            </td>
+                            <td>
+                                <em>
+                                Elevating Perceptual Sample Quality in Probabilistic Circuits through Differentiable Sampling
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/10_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/8aTnMHtTIRc">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/10_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                11
+                            </td>
+                            <td>
+                                Rohit La, Arihant Gaur, Aadhithya Iyer, Muhammed Abdullah Shaikh, Ritik Agrawal, Shital Chiddarwar
+                            </td>
+                            <td>
+                                <em>
+                                Open-Set Multi-Source Multi-Target Domain Adaptation
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/11_paper.pdf">Proposal</a>
+                                <a href="papers_21neurips/11_suppl.pdf">Supmat</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/dflYL6WBZI4">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/11_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                15
+                            </td>
+                            <td>
+                                Sebastian Palacio, Federico Raue, Tushar Karayil, Jörn Hees, Andreas Dengel
+                            </td>
+                            <td>
+                                <em>
+                                IteROAR: Quantifying the Interpretation of Feature Importance Methods
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/15_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/vEfd6jjlKQg">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/15_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                18
+                            </td>
+                            <td>
+                                Kshitij Ambilduke, Aneesh Shetye, Diksha Bagade, Rishika Bhagwatkar, Khurshed Fitter, Prasad Vagdargi, Shital Chiddarwar
+                            </td>
+                            <td>
+                                <em>
+                                Enhancing Context Through Contrast
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/18_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/YCn96BDD-j8">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/18_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                19
+                            </td>
+                            <td>
+                                Shuyang Li, Huanru Henry Mao, Julian McAuley
+                            </td>
+                            <td>
+                                <em>
+                                Variable Bitrate Discrete Neural Representations via Causal Self-Attention
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/19_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/hOdTeJv1a7Y">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/19_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                26
+                            </td>
+                            <td>
+                                Pierre Thodoroff, Wenyu Li, Neil D. Lawrence
+                            </td>
+                            <td>
+                                <em>
+                                Benchmarking Real-Time Reinforcement Learning
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/26_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/UbQl0LxqFzo">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/26_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                29
+                            </td>
+                            <td>
+                                Vaasudev Narayanan, Aniket Anand Deshmukh, Urun Dogan, Vineeth N Balasubramaniam
+                            </td>
+                            <td>
+                                <em>
+                                On Challenges in Unsupervised Domain Generalization
+                                </em>
+                            </td>
+                            <td>
+                                <a href="papers_21neurips/26_paper.pdf">Proposal</a>
+                            </td>
+                            <td>
+                                <a href="https://youtu.be/KDQlb_0oEFg">Video</a>
+                            </td>
+                            <td>
+                                <a href="posters_21neurips/26_poster.png">Poster</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        </div>
+        </section>
+
 		<!-- ------------------------------------------------------------------------------------------------------->
 		<section class="main style1">
 			<div class="container">
