thank the reviewers

--- a/index.html
+++ b/index.html
@@ -740,6 +740,95 @@
 				</div>
             </div>
         </section>
+				
+		<!-- ------------------------------------------------------------------------------------------------------->
+		<section class="main style2 special">
+			<div class="container">
+				<header class="major">
+					<h2>Reviewers</h2>
+				</header>
+				<p>Many thanks to all the reviewers for their help!</p>
+				<div class="row">
+					<div class="col-4 col-12-xsmall">
+						Adrian      Javaloy <br>
+						Adrian      Spurr<br>
+						Alex        Hernandez Garcia<br>
+						Andrew      Gambardella<br>
+						Arnout      Devos<br>
+						Ayush       Jaiswal<br>
+						Bernardino  Romera-Paredes<br>
+						Brad    J   Gram-Hansen<br>
+						Carianne    Martinez<br>
+						Cees        Snoek<br>
+						Chaitanya   Devaguptapu<br>
+						Chaoning    Zhang<br>
+						Chen        Sun<br>
+						David       Krueger <br>
+						Dimitris    Tsipras <br>
+						Disha       Shrivastava<br>
+						Efstratios  Gavves<br>
+						Emir        Konuk<br>
+						Emmanuel    Bengio<br>
+						Erika       Lu<br>
+						Evangelos   Kazakos<br>
+						Francesco   Ferroni <br>
+						Francesco   Pinto<br>
+						Francisco   Girbal Eiras
+					</div>
+					<div class="col-4 col-12-xsmall">
+						Hadrien     Bertrand<br>
+						Hamid       Eghbal-zadeh<br>
+						Harkirat    Behl<br>
+						Jack        Valmadre<br>
+						James       Thornton<br>
+						Jason   S.   Hartford<br>
+						Joseph      Viviano<br>
+						Konstantinos    Tertikas<br>
+						Lénaïc        Chizat<br>
+						Li      Shen<br>
+						Liliane     Momeni<br>
+						Malik   H.  Altakrori<br>
+						Martin      Mundt<br>
+						Mélisande  Teng<br>
+						Michele     Svanera <br>
+						Miguel-Ángel   Fernández-Torres<br>
+						Nazanin M.   Sepahvand<br>
+						Oriane      Siméoni<br>
+						Paul        Rubenstein<br>
+						Rishabh     Agarwal <br>
+						Robert  M.   Gower<br>
+						Romain      Mueller<br>
+						Ruizhe      Li<br>
+						Sadegh      Aliakbarian
+					</div>
+					<div class="col-4 col-12-xsmall">
+						Safa        Alver<br>
+						Shahab      Bakhtiari<br>
+						Shangzhe    Wu<br>
+						Sharath Chandra Raparthy<br>
+						Steffen     Schneider<br>
+						Steinar     Laenen<br>
+						Taoli       Cheng<br>
+						Tom     Joy<br>
+						Udo M.   Schlegel<br>
+						Victor      Schmidt<br>
+						Vincent     Dumoulin<br>
+						Vincent     Mai<br>
+						Viveka      Kulharia<br>
+						Xavier      Gibert<br>
+						Xutan       Peng<br>
+						Yana        Hasson<br>
+						Yongtuo     Liu<br>
+						Yuge        Shi<br>
+						Yuki    M.   Asano<br>
+						Yunhua      Zhang<br>
+						Zhao        Yang<br>
+						Zhongdao    Wang
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<!-- ------------------------------------------------------------------------------------------------------->
         <section class="main style2">
 			<div class="container">
