--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                                 11
                             </td>
                             <td>
-                                Rohit La, Arihant Gaur, Aadhithya Iyer, Muhammed Abdullah Shaikh, Ritik Agrawal, Shital Chiddarwar
+                                Rohit Lal, Arihant Gaur, Aadhithya Iyer, Muhammed Abdullah Shaikh, Ritik Agrawal, Shital Chiddarwar
                             </td>
                             <td>
                                 <em>
