make video have a responsive size, instead of fixed (for mobile)

--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
             <!--<p> </p>-->
             <header class="major special">
                 <h2>Accepted proposals</h2>
+								<p>Including a playlist of all 3-minute spotlight videos.</p>
             </header>
             
-            <p align="center">
-                Playlist of all 3-minute videos<br>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLB2hvs7du3_dNYh7JZY0-EUUrGDYFGpbl" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </p>
+						<div class="video-wrapper">
+                <iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=PLB2hvs7du3_dNYh7JZY0-EUUrGDYFGpbl" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
 
             <div class="table-wrapper">
                 <table>
