--- a/index.html
+++ b/index.html
@@ -891,10 +891,14 @@
 				cell.dataset.utc = cell.innerText;
 			}
 
-			function change_timezone(event) {
-				// get the selected offset by chopping off the "UTC" prefix from the
-				// selected string, and interpreting the rest as an int
-				let offset = parseInt(event.target.value.slice(3));
+			function change_timezone(event_or_offset) {
+				let offset = 0;
+				if (typeof event_or_offset === 'number')
+					offset = event_or_offset;  // passed an offset directly as a number (at initialization)
+				else
+					// get the selected offset by chopping off the "UTC" prefix from the
+					// selected string, and interpreting the rest as an int
+					offset = parseInt(event_or_offset.target.value.slice(3));
 
 				// change the timezone to the given integer offset, by editing the table
 				for (let j = 1; j < schedule.rows.length; j++) {
@@ -933,9 +937,10 @@
 			}
 			timezone_select.addEventListener('change', change_timezone);
 
-			// initialize with the local UTC offset
+			// initialize with the local UTC offset, and update the table
 			let utc_offset_hours = -(new Date().getTimezoneOffset()) / 60;
 			timezone_select.selectedIndex = utc_offset_hours + 12;
+			change_timezone(utc_offset_hours);
 		</script>
 
 	</body>
