--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
 								<td>12:10</td><td>Sarahanne Field (Invited Talk)</td><td>0:30</td>
 							</tr>
 							<tr>
-								<td>12:40</td><td>Oral Session 1</td><td>0:20</td>
+								<td>12:40</td><td>Oral Session 1<br><em>PCA Retargeting: Encoding Linear Shape Models as Convolutional Mesh Autoencoders (Eimear O'Sullivan)</em></td><td>0:20</td>
 							</tr>
 							<tr>
 								<td>13:00</td><td>Spotlights 1 (5 x 3 min)</td><td>0:20</td>
 							</tr>
 							<tr>
-								<td>13:20</td><td>Oral Session 2</td><td>0:20</td>
+								<td>13:20</td><td>Oral Session 2<br><em>Unsupervised Resource Allocation with Graph Neural Networks (Miles Cranmer)</em></td><td>0:20</td>
 							</tr>
 							<tr>
 								<td>13:30</td><td>Break</td><td>0:30</td>
@@ -180,7 +180,7 @@
 								<td>17:00</td><td>Paul Smaldino (Invited Talk)</td><td>0:30</td>
 							</tr>
 							<tr>
-								<td>17:30</td><td>Oral Session 3</td><td>0:20</td>
+								<td>17:30</td><td>Oral Session 3<br><em>Confronting Domain Shift in Trained Neural Networks (Carianne Martinez)</em></td><td>0:20</td>
 							</tr>
 							<tr>
 								<td>17:50</td><td>2020 Authors' Experience (Discussion Panel)</td><td>0:15</td>
