--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2>The <strong style="color:#FCCA46;">pre-registration workshop</strong>: <br>An alternative publication model for machine learning research</h2>
-				<h4>At <a href="https://neurips.cc/" target="_blank">NeurIPS 2021</a>.</h4>
+				<!-- <h4>At <a href="https://neurips.cc/" target="_blank">NeurIPS 2021</a>.</h4> -->
 				<h4>Monday, December 13, 12:00-19:00 GMT</h4>
+				<ul class="actions special">
+					<li><a href="https://neurips.cc/virtual/2021/workshop/21885" class="button primary">Click here to join us at NeurIPS 2021!</a></li>
+				</ul>
 			</div>
 		</section>
         
@@ -132,8 +135,11 @@
 			<div class="container">
 				<header class="major">
 					<h2>Schedule (December 13)</h2>
-					<p>When live, access the sessions through <a href="https://neurips.cc/virtual/2021/workshop/21885">this NeurIPS website</a>.</p>
 				</header>
+				
+				<ul class="actions special">
+					<li><a href="https://neurips.cc/virtual/2021/workshop/21885" class="button primary">Click here to join us at NeurIPS 2021!</a></li>
+				</ul>
 
 				<div class="table-wrapper">
 					<table id="schedule">
@@ -171,7 +177,14 @@
 								<td>15:10</td><td>Spotlights 2 (5 x 3 min)</td><td>0:20</td>
 							</tr>
 							<tr>
-								<td>15:30</td><td>Poster Session</td><td>1:00</td>
+								<td>15:30</td>
+								<td>
+									Poster Session
+									<ul class="actions special">
+										<li><a href="https://eventhosts.gather.town/app/F5CfZLXwNGasEmGR/prereg-posters" class="button">Click to join us at Gather.Town</a></li>
+									</ul>
+								</td>
+								<td>1:00</td>
 							</tr>
 							<tr>
 								<td>16:30</td><td>Break</td><td>0:30</td>
