--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- <h4>At <a href="https://neurips.cc/" target="_blank">NeurIPS 2021</a>.</h4> -->
 				<h4>Monday, December 13, 12:00-19:00 GMT</h4>
 				<ul class="actions special">
-					<li><a href="https://neurips.cc/virtual/2021/workshop/21885" class="button primary">Click here to join us at NeurIPS 2021!</a></li>
+					<li><a href="https://neurips.cc/virtual/2021/workshop/21885" class="button primary">Click to join us at NeurIPS 2021!</a></li>
 				</ul>
 			</div>
 		</section>
@@ -140,7 +140,7 @@
 				</header>
 				
 				<ul class="actions special">
-					<li><a href="https://neurips.cc/virtual/2021/workshop/21885" class="button primary">Click here to join us at NeurIPS 2021!</a></li>
+					<li><a href="https://neurips.cc/virtual/2021/workshop/21885" class="button primary">Click to join us at NeurIPS 2021!</a></li>
 				</ul>
 
 				<div class="table-wrapper">
