--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                             <td><h4>Selection of results papers for PMLR journal</h4></td>
                         </tr>
                         <tr>
-                            <td>&emsp;<strike>30th April</strike>, 7th May 2022 (23:59 AoE timezone)</td>
+                            <td>&emsp;<strike>30th April</strike>, 7th May 2022 (23:59 AoE timezone). <a href="https://cmt3.research.microsoft.com/NeurIPSWSPrereg2021/">Link to CMT</a></td>
                             <td>&emsp;Full paper (with results) submission <span style="color:DarkSeaGreen">(authors)</span></td>
                         </tr>
                     </tbody>
