--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 							<td>&rarr; There are two phases. The first one involves the presentation of paper <i>proposals</i> and will conclude with NeurIPS 2021 workshop day.  The experiment phase will start after the acceptance of the proposals and will continue after the day of the workshop.</td>
                         </tr>
                         <tr>
-							<td>&rarr; The deadline for the proposal is September the 19th. The deadline for the results is <strike>30th April</strike>, 7th May 2022 (23:59 AoE timezone).</td>
+							<td>&rarr; The deadline for the proposal is September the 19th. The deadline for the results is <strike>30th April</strike>, 7th May 2022 (23:59 AoE timezone). <a href="https://cmt3.research.microsoft.com/NeurIPSWSPrereg2021/">Link to CMT</a>.</td>
                         </tr>
 						<tr>
 							<td>&rarr; The proposal is non-archival and will be included in the workshop proceedings. The full papers, formed as the collation of proposal and results, will each published as a journal in a PMLR volume.</td>
