fix 2019 edition link

--- a/index.html
+++ b/index.html
@@ -803,8 +803,8 @@
 					</p>
 
                     <ul class="actions special">
-                        <li><a href="https://preregister.science/neurips2020.html" class="button primary">NeurIPS 2020 workshop</a></li>
-                        <li><a href="https://preregister.vision" class="button">ICCV 2019 workshop</a></li>
+                        <li><a href="neurips2020.html" class="button primary">NeurIPS 2020 workshop</a></li>
+                        <li><a href="iccv2019.html" class="button">ICCV 2019 workshop</a></li>
                     </ul>
                 </div>
 			</div>
